# gamecpu

./: Cargo.toml  QWEN.md  README.md  build.rs  gltf2intmesh.py  lamp_int.json  raw2png.py  run.sh
shaders/: clear.comp  raster.comp  setup_bin.comp  vertex.comp
src/: main.rs  pbr.wgsl  sincos_cos_q15.in  sincos_sin_q15.in
