[package]
name = "lavapipe_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bytemuck = { version = "1", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
pollster = "0.3"
wgpu = { version = "24", features = ["spirv"] }
winit = "0.29"
serde_json = "1.0"
basis-universal = "0.3"
ktx2 = "0.3"
futures-channel = "0.3"

[build-dependencies]
